фикс замечаний по архитектуре + рабочая корзина

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 
-	<div class="modal">
+	<div class="modal" id="product-preview-class">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
