--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -203,7 +203,7 @@
 			<h2 class="modal__title">Корзина</h2>
 			<ul class="basket__list"></ul>
 			<div class="modal__actions">
-				<button class="button basket__button">Оформить</button>
+				<button class="button basket__button" id="oformlenie">Оформить</button>
 				<span class="basket__price">0 синапсов</span>
 			</div>
 		</div>
@@ -215,13 +215,13 @@
 				<div class="order__field">
 					<h2 class="modal__title">Способ оплаты</h2>
 					<div class="order__buttons">
-						<button name="card" type="button" class="button button_alt">Онлайн</button>
-						<button name="cash" type="button" class="button button_alt">При получении</button>
+						<button name="card" type="button" class="button button_alt button__card">Онлайн</button>
+						<button name="cash" type="button" class="button button_alt button__cash">При получении</button>
 					</div>
 				</div>
 				<label class="order__field">
-					<span class="form__label modal__title">Адрес доставки</span>
-					<input name="address" class="form__input" type="text" placeholder="Введите адрес" />
+					<span class="form__label modal__title" id="address" >Адрес доставки</span>
+					<input name="address" class="form__input" type="text" placeholder="Введите адрес" required />
 				</label>
 			</div>
 			<div class="modal__actions">
@@ -236,15 +236,15 @@
 			<div class="order">
 				<label class="order__field">
 					<span class="form__label modal__title">Email</span>
-					<input name="email" class="form__input" type="text" placeholder="Введите Email" />
+					<input name="email" class="form__input" type="text" placeholder="Введите Email" required/>
 				</label>
 				<label class="order__field">
 					<span class="form__label modal__title">Телефон</span>
-					<input name="phone" class="form__input" type="text" placeholder="+7 (" />
+					<input name="phone" class="form__input" type="text" placeholder="+7 (" required/>
 				</label>
 			</div>
 			<div class="modal__actions">
-				<button type="submit" disabled class="button">Оплатить</button>
+				<button type="submit" disabled class="button button__finish">Оплатить</button>
 				<span class="form__errors"></span>
 			</div>
 		</form>
